@@ -1460,7 +1460,8 @@ void cItem::addItem( cItem* pItem, bool randomPos, bool handleWeight, bool noRem
 	{
 		if ( !pItem->unprocessed() )
 		{
-			pItem->multi()->removeObject( this );
+			// pItem has to be removed from Multi!
+			pItem->multi()->removeObject( pItem );
 		}
 		pItem->setMulti( 0 );
 	}
@@ -2384,12 +2385,35 @@ unsigned int cItem::decayDelay()
 
 void cItem::save( cBufferedWriter& writer )
 {
-	cUObject::save( writer );
-
-	// Save container content
-	for ( ContainerIterator it( this ); !it.atEnd(); ++it )
+	if ( free )
 	{
-		( *it )->save( writer );
+		Console::instance()->log( LOG_WARNING, tr( "Skipping item 0x%1 during save process because it's already freed.\n" ).arg( serial_, 0, 16 ) );
+		Console::instance()->log( LOG_WARNING, tr( "%1\n" ).arg( this->id_ ) );
+		if ( container_ && container_->free ) 
+		{
+			P_ITEM item = dynamic_cast<P_ITEM>( container_ );
+			if ( item )
+				Console::instance()->log( LOG_WARNING, tr( "%1\n" ).arg( item->id_ ) );
+		}
+		cMulti * mult = this->multi_;
+		if ( mult )
+		{
+			Console::instance()->log( LOG_WARNING, "Multi!" );
+		}
+	}
+	else if ( container_ && container_->free )
+	{
+		Console::instance()->log( LOG_WARNING, tr( "Skipping item 0x%1 during save process because it's in a freed container.\n" ).arg( serial_, 0, 16 ) );
+	}
+	else
+	{
+		cUObject::save( writer );
+
+		// Save container content
+		for ( ContainerIterator it( this ); !it.atEnd(); ++it )
+		{
+			( *it )->save( writer );
+		}
 	}
 }
 
